--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ code {
 img {
   max-width: 100%;
 }
+
+.grid-responsive {
+  display              : grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap             : 1rem;
+}
